# dt-fileviewer-web

./: .gitignore  README.md  pyproject.toml
dt-fileviewer/: main.py
dt-fileviewer/router/: routers.py
dt-fileviewer/static/css/: styles.css
dt-fileviewer/static/js/: configure.js  top_navbar.js  viewfile.js
dt-fileviewer/templates/: base.html  configure.html  system.html  top_navbar.html  viewfile.html
dt-fileviewer/utils/: cfg.py  helper.py  textfile_tailer.py  validation.py  ws_con_mgr.py
scripts/: dt-fileviewer.service  service.sh
